# scrap-rs

./: Cargo.toml  README.md
.github/workflows/: update-homebrew.yml
docs/plans/: 2026-01-31-schema-alignment-and-validation-design.md  2026-01-31-tui-design.md  2026-01-31-tui-implementation.md  2026-02-01-summarize-design.md
scripts/: explorer.sh
src/: db.rs  llm.rs  main.rs  utils.rs  version_check.rs
src/commands/: add.rs  append.rs  delete.rs  edit_tag.rs  export.rs  find.rs  import.rs  list.rs  mod.rs  open.rs  read.rs  write.rs
src/tui/: events.rs  markdown.rs  mod.rs  ui.rs
