[package]
name = "scrap-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scrap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
